removing G_BEGIN_DECLS

--- a/libmatecomponentui/matecomponent/Makefile.in
+++ b/libmatecomponentui/matecomponent/Makefile.in
@@ -524,7 +524,7 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libmatecomponentui-2.la: $(libmatecomponentui_2_la_OBJECTS) $(libmatecomponentui_2_la_DEPENDENCIES) 
+libmatecomponentui-2.la: $(libmatecomponentui_2_la_OBJECTS) $(libmatecomponentui_2_la_DEPENDENCIES)
 	$(libmatecomponentui_2_la_LINK) -rpath $(libdir) $(libmatecomponentui_2_la_OBJECTS) $(libmatecomponentui_2_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
@@ -889,7 +889,7 @@ matecomponent-ui-type-builtins.h: Makefile $(libmatecomponentui_h_sources)
 	$(GLIB_MKENUMS) --fhead "#ifndef __MATECOMPONENT_UI_TYPE_BUILTINS_H__\n" \
 			--fhead "#define __MATECOMPONENT_UI_TYPE_BUILTINS_H__ 1\n\n" \
 			--fhead "#include <glib-object.h>\n\n" \
-			--fhead "G_BEGIN_DECLS\n\n" \
+			--fhead "#ifdef __cplusplus\nextern \"C\" {\n#endif\n\n" \
 			--ftail "G_END_DECLS\n\n" \
 			--ftail "#endif /* __MATECOMPONENT_UI_TYPE_BUILTINS_H__ */\n" \
 			--fprod "\n/* --- @filename@ --- */" \
