--- a/libmatenotify/libmatenotify/Makefile.in
+++ b/libmatenotify/libmatenotify/Makefile.in
@@ -365,7 +365,7 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libmatenotify.la: $(libmatenotify_la_OBJECTS) $(libmatenotify_la_DEPENDENCIES) 
+libmatenotify.la: $(libmatenotify_la_OBJECTS) $(libmatenotify_la_DEPENDENCIES)
 	$(AM_V_CCLD)$(libmatenotify_la_LINK) -rpath $(libdir) $(libmatenotify_la_OBJECTS) $(libmatenotify_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
@@ -648,7 +648,7 @@ $(ENUM_FILE).h: s-enum-types-h
 	@true
 s-enum-types-h: $(notify_headers) Makefile
 	$(AM_V_GEN) ( cd $(srcdir) && glib-mkenums \
-			--fhead "#ifndef _NOTIFY_ENUM_TYPES_H_\n#define _NOTIFY_ENUM_TYPES_H_\n\n#include <glib-object.h>\n\nG_BEGIN_DECLS\n" \
+			--fhead "#ifndef _NOTIFY_ENUM_TYPES_H_\n#define _NOTIFY_ENUM_TYPES_H_\n\n#include <glib-object.h>\n\n#ifdef __cplusplus\nextern \"C\" {\n#endif\n" \
 			--fprod "/* enumerations from \"@filename@\" */\n" \
 			--vhead "GType @enum_name@_get_type(void);\n#define NOTIFY_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n"	\
 			--ftail "G_END_DECLS\n\n#endif /* _NOTIFY_ENUM_TYPES_H_ */" \
