--- a/libmate/libmate/Makefile.in
+++ b/libmate/libmate/Makefile.in
@@ -457,7 +457,7 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libmate-2.la: $(libmate_2_la_OBJECTS) $(libmate_2_la_DEPENDENCIES) 
+libmate-2.la: $(libmate_2_la_OBJECTS) $(libmate_2_la_DEPENDENCIES)
 	$(AM_V_CCLD)$(libmate_2_la_LINK) -rpath $(libdir) $(libmate_2_la_OBJECTS) $(libmate_2_la_LIBADD) $(LIBS)
 install-binPROGRAMS: $(bin_PROGRAMS)
 	@$(NORMAL_INSTALL)
@@ -502,7 +502,7 @@ clean-binPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-mate-open$(EXEEXT): $(mate_open_OBJECTS) $(mate_open_DEPENDENCIES) 
+mate-open$(EXEEXT): $(mate_open_OBJECTS) $(mate_open_DEPENDENCIES)
 	@rm -f mate-open$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(mate_open_OBJECTS) $(mate_open_LDADD) $(LIBS)
 
@@ -820,7 +820,7 @@ stamp-libmatetypebuiltins.h: Makefile @REBUILD@ $(libmate_headers)
 			--fhead "#ifndef __LIBMATETYPEBUILTINS_H__\n" \
 			--fhead "#define __LIBMATETYPEBUILTINS_H__ 1\n\n" \
 			--fhead "#include <libmate/libmate.h>\n\n" \
-			--fhead "G_BEGIN_DECLS\n\n" \
+			--fhead "#ifdef __cplusplus\nextern \"C\" {\n#endif\n\n" \
 			--ftail "G_END_DECLS\n\n" \
 			--ftail "#endif /* __LIBMATETYPEBUILTINS_H__ */\n" \
 			--fprod "\n/* --- @filename@ --- */" \
