--- a/libmateui/libmateui/Makefile.am
+++ b/libmateui/libmateui/Makefile.am
@@ -27,7 +27,7 @@ INCLUDES = \
 	$(WARN_CFLAGS)					\
 	$(LIBMATEUI_CFLAGS)
 
-EXTRA_HEADERS = 
+EXTRA_HEADERS =
 
 if OS_WIN32
 platform_dep_sources = \
@@ -169,7 +169,7 @@ stamp-matetypebuiltins.h: @REBUILD@ $(mate_headers)
 			--fhead "#ifndef __MATETYPEBUILTINS_H__\n" \
 			--fhead "#define __MATETYPEBUILTINS_H__ 1\n\n" \
 			--fhead "#include <glib-object.h>\n\n" \
-			--fhead "G_BEGIN_DECLS\n\n" \
+			--fhead "#ifdef __cplusplus\nextern \"C\" {\n#endif\n\n" \
 			--ftail "G_END_DECLS\n\n" \
 			--ftail "#endif /* __MATETYPEBUILTINS_H__ */\n" \
 			--fprod "\n/* --- @filename@ --- */" \
