--- a/libmateui/libmateui/Makefile.in
+++ b/libmateui/libmateui/Makefile.in
@@ -396,7 +396,7 @@ INCLUDES = \
 	$(WARN_CFLAGS)					\
 	$(LIBMATEUI_CFLAGS)
 
-EXTRA_HEADERS = 
+EXTRA_HEADERS =
 @OS_WIN32_FALSE@platform_dep_sources = \
 @OS_WIN32_FALSE@	mate-authentication-manager.c  \
 @OS_WIN32_FALSE@	mate-authentication-manager.h  \
@@ -621,7 +621,7 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libmateui-2.la: $(libmateui_2_la_OBJECTS) $(libmateui_2_la_DEPENDENCIES) 
+libmateui-2.la: $(libmateui_2_la_OBJECTS) $(libmateui_2_la_DEPENDENCIES)
 	$(AM_V_CCLD)$(libmateui_2_la_LINK) -rpath $(libdir) $(libmateui_2_la_OBJECTS) $(libmateui_2_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
@@ -1110,7 +1110,7 @@ stamp-matetypebuiltins.h: @REBUILD@ $(mate_headers)
 			--fhead "#ifndef __MATETYPEBUILTINS_H__\n" \
 			--fhead "#define __MATETYPEBUILTINS_H__ 1\n\n" \
 			--fhead "#include <glib-object.h>\n\n" \
-			--fhead "G_BEGIN_DECLS\n\n" \
+			--fhead "#ifdef __cplusplus\nextern \"C\" {\n#endif\n\n" \
 			--ftail "G_END_DECLS\n\n" \
 			--ftail "#endif /* __MATETYPEBUILTINS_H__ */\n" \
 			--fprod "\n/* --- @filename@ --- */" \
