--- a/mate-panel/libmate-panel-applet/Makefile.in
+++ b/mate-panel/libmate-panel-applet/Makefile.in
@@ -505,7 +505,7 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libmate-panel-applet-3.la: $(libmate_panel_applet_3_la_OBJECTS) $(libmate_panel_applet_3_la_DEPENDENCIES) 
+libmate-panel-applet-3.la: $(libmate_panel_applet_3_la_OBJECTS) $(libmate_panel_applet_3_la_DEPENDENCIES)
 	$(AM_V_CCLD)$(libmate_panel_applet_3_la_LINK) -rpath $(libdir) $(libmate_panel_applet_3_la_OBJECTS) $(libmate_panel_applet_3_la_LIBADD) $(LIBS)
 
 clean-noinstPROGRAMS:
@@ -516,7 +516,7 @@ clean-noinstPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-test-dbus-applet$(EXEEXT): $(test_dbus_applet_OBJECTS) $(test_dbus_applet_DEPENDENCIES) 
+test-dbus-applet$(EXEEXT): $(test_dbus_applet_OBJECTS) $(test_dbus_applet_DEPENDENCIES)
 	@rm -f test-dbus-applet$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(test_dbus_applet_OBJECTS) $(test_dbus_applet_LDADD) $(LIBS)
 
@@ -890,7 +890,7 @@ mate-panel-applet-enums.h: @REBUILD@ $(mate_panel_applet_enum_headers)
 	$(AM_V_GEN)glib-mkenums \
 			--fhead "#ifndef __MATE_PANEL_APPLET_ENUMS_H__\n" \
 			--fhead "#define __MATE_PANEL_APPLET_ENUMS_H__\n\n" \
-			--fhead "G_BEGIN_DECLS\n\n" \
+			--fhead "#ifdef __cplusplus\nextern \"C\" {\n#endif\n\n" \
 			--ftail "G_END_DECLS\n\n" \
 			--ftail "#endif /* __MATE_PANEL_APPLET_ENUMS_H__ */\n" \
 			--fprod "\n/* --- @filename@ --- */" \
