--- a/mate-panel/mate-panel/Makefile.in
+++ b/mate-panel/mate-panel/Makefile.in
@@ -743,13 +743,13 @@ clean-binPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-mate-desktop-item-edit$(EXEEXT): $(mate_desktop_item_edit_OBJECTS) $(mate_desktop_item_edit_DEPENDENCIES) 
+mate-desktop-item-edit$(EXEEXT): $(mate_desktop_item_edit_OBJECTS) $(mate_desktop_item_edit_DEPENDENCIES)
 	@rm -f mate-desktop-item-edit$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(mate_desktop_item_edit_OBJECTS) $(mate_desktop_item_edit_LDADD) $(LIBS)
-mate-panel$(EXEEXT): $(mate_panel_OBJECTS) $(mate_panel_DEPENDENCIES) 
+mate-panel$(EXEEXT): $(mate_panel_OBJECTS) $(mate_panel_DEPENDENCIES)
 	@rm -f mate-panel$(EXEEXT)
 	$(AM_V_CCLD)$(mate_panel_LINK) $(mate_panel_OBJECTS) $(mate_panel_LDADD) $(LIBS)
-mate-panel-test-applets$(EXEEXT): $(mate_panel_test_applets_OBJECTS) $(mate_panel_test_applets_DEPENDENCIES) 
+mate-panel-test-applets$(EXEEXT): $(mate_panel_test_applets_OBJECTS) $(mate_panel_test_applets_DEPENDENCIES)
 	@rm -f mate-panel-test-applets$(EXEEXT)
 	$(AM_V_CCLD)$(mate_panel_test_applets_LINK) $(mate_panel_test_applets_OBJECTS) $(mate_panel_test_applets_LDADD) $(LIBS)
 install-libexecSCRIPTS: $(libexec_SCRIPTS)
@@ -2165,7 +2165,7 @@ panel-typebuiltins.h: @REBUILD@ $(panel_enum_headers)
 	$(AM_V_GEN)glib-mkenums \
 			--fhead "#ifndef __PANEL_TYPEBUILTINS_H__\n" \
 			--fhead "#define __PANEL_TYPEBUILTINS_H__ 1\n\n" \
-			--fhead "G_BEGIN_DECLS\n\n" \
+			--fhead "#ifdef __cplusplus\nextern \"C\" {\n#endif\n\n" \
 			--ftail "G_END_DECLS\n\n" \
 			--ftail "#endif /* __PANEL_TYPEBUILTINS_H__ */\n" \
 			--fprod "\n/* --- @filename@ --- */" \
