allow to disable start-notification

--- a/mate-desktop/config.h.in
+++ b/mate-desktop/config.h.in
@@ -33,7 +33,7 @@
 /* Define if the xrandr-$XRANDR_REQUIRED library is present */
 #undef HAVE_RANDR
 
-/* Define if the startup-notification package is present */
+/* Building with startup notification support */
 #undef HAVE_STARTUP_NOTIFICATION
 
 /* Define to 1 if you have the <stdint.h> header file. */
