--- a/mate-desktop/distro/archlinux/PKGBUILD
+++ b/mate-desktop/distro/archlinux/PKGBUILD
@@ -16,7 +16,8 @@ build() {
 	cd "$srcdir/$pkgname"
 
 	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
-		--localstatedir=/var --disable-static --disable-scrollkeeper
+		--localstatedir=/var --disable-static --disable-scrollkeeper \
+		--disable-startup-notification
 
 	make
 }
