--- a/mate-desktop/mate-about/mate-about.desktop.in.in
+++ b/mate-desktop/mate-about/mate-about.desktop.in.in
@@ -11,5 +11,5 @@ X-MATE-Bugzilla-Bugzilla=MATE
 X-MATE-Bugzilla-Product=mate-desktop
 X-MATE-Bugzilla-Component=mate-about
 X-MATE-Bugzilla-Version=@VERSION@
-StartupNotify=true
+StartupNotify=false
 NoDisplay=true
