updating to last metacity code

--- a/mate-desktop/distro/archlinux/PKGBUILD
+++ b/mate-desktop/distro/archlinux/PKGBUILD
@@ -17,7 +17,7 @@ build() {
 
 	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static --disable-scrollkeeper \
-		--disable-startup-notification
+		#--disable-startup-notification
 
 	make
 }
