--- a/mate-desktop/distro/ubuntu/build
+++ b/mate-desktop/distro/ubuntu/build
@@ -5,7 +5,7 @@ pkgname=mate-desktop
 pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Library with common API for various MATE modules"
-#depends="mate-conf, startup-notification, gtk2"
+depends=('mate-conf' 'gtk2-engines-pixbuf')
 # editar esta funcion!
 build() {
 	cd $pkgsrc
