hax for ubuntu metacity theme

--- a/libmate/distro/ubuntu/build
+++ b/libmate/distro/ubuntu/build
@@ -5,6 +5,7 @@ pkgname=libmate
 pkgver=2011.9.26
 pkgrel=1
 pkgdesc="Common libraries for MATE"
+depends=('mate-conf')
 
 # editar esta funcion!
 build() {
