bug fix: /var/lib/dpkg/info/mate-panel.postinst: 5: usr/bin/mateconftool-2: not found (http://ubuntuforums.org/showpost.php?p=11354124&postcount=56)

--- a/mate-panel/distro/ubuntu/build
+++ b/mate-panel/distro/ubuntu/build
@@ -15,7 +15,7 @@ build() {
 	# entramos a la carpeta
 	cd ${pkgname}
 
-	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
+	./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
 		--libexecdir=/usr/lib/mate-panel \
 		--disable-scrollkeeper || return 1
