--- a/mate-conf/distro/archlinux/PKGBUILD
+++ b/mate-conf/distro/archlinux/PKGBUILD
@@ -25,6 +25,7 @@ build() {
 		--libexecdir=/usr/lib/MateConf \
 		--localstatedir=/var --disable-static \
 		--enable-defaults-service --enable-gsettings-backend=no || return 1
+	# --with-gtk=3.0
 	make || return 1
 }
 
