--- a/libmatecanvas/configure.in
+++ b/libmatecanvas/configure.in
@@ -79,13 +79,41 @@ AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Gettext package])
 AM_GLIB_GNU_GETTEXT
 AM_GLIB_DEFINE_LOCALEDIR([MATECANVASLOCALEDIR])
 
+dnl ---------------------------------------------------------------------------
+dnl GTK library version
+dnl ---------------------------------------------------------------------------
+GTK_API_VERSION=2.0
+GAIL_API_VERSION=
+GTK_REQUIRED=2.2.0
+
+AC_MSG_CHECKING([which gtk+ version to compile against])
+AC_ARG_WITH([gtk],
+  [AS_HELP_STRING([--with-gtk=2.0|3.0],[which gtk+ version to compile against (default: 2.0)])],
+  [case "$with_gtk" in
+     2.0|3.0) ;;
+     *) AC_MSG_ERROR([invalid gtk version specified]) ;;
+   esac],
+  [with_gtk=2.0])
+AC_MSG_RESULT([$with_gtk])
+
+case "$with_gtk" in
+  2.0) GTK_API_VERSION=2.0
+       GTK_REQUIRED=2.2.0
+       GAIL_API_VERSION=
+       ;;
+  3.0) GTK_API_VERSION=3.0
+       GTK_REQUIRED=3.0.0
+       GAIL_API_VERSION=-3.0
+       ;;
+esac
+
 dnl
 dnl GTK+ check
 dnl
 CANVAS_MODULES="dnl
   glib-2.0 >= glib_required_version dnl
-  gtk+-2.0 >= gtk_required_version dnl
-  gail >= gail_required_version dnl
+  gtk+-$GTK_API_VERSION >= $GTK_REQUIRED dnl
+  gail$GAIL_API_VERSION >= gail_required_version dnl
   libart-2.0 >= libart_required_version dnl
   pango >= pango_required_version dnl
   pangoft2 >= pango_required_version"
@@ -220,6 +248,7 @@ Configure summary:
 	Compiler Flags..............: ${CFLAGS}
 	Prefix .....................: ${prefix}
 
+	Gtk+ version................: ${GTK_API_VERSION}
 	Glade support...............: ${enable_glade}
 	Rebuilds....................: ${enable_rebuilds}
 	Win32.......................: ${platform_win32}
