--- a/mate-corba/distro/ubuntu/build
+++ b/mate-corba/distro/ubuntu/build
@@ -15,9 +15,9 @@ build() {
 	# entramos a la carpeta
 	cd ${pkgname}
 
-	./configure --prefix=/usr --disable-static
-	make
-	make DESTDIR="${pkgdir}" install
+	./configure --prefix=/usr --disable-static || return 1
+	make || return 1
+	make DESTDIR="${pkgdir}" install || return 1
 }
 
 # esto incluye la parte que se repite en la mayoria de los builds
