gdk_drawable_get_size was gone

--- a/libmate/distro/archlinux/PKGBUILD
+++ b/libmate/distro/archlinux/PKGBUILD
@@ -1,15 +1,16 @@
 pkgname=libmate
-pkgver=2011.9.26
-pkgrel=1
+pkgver=2011.10.24
+pkgrel=2
 pkgdesc="Common libraries for MATE"
 arch=('i686' 'x86_64')
 license=('LGPL')
 depends=( 'ttf-freefont' 'mate-conf')
-makedepends=('mate-vfs' 'libmatecomponent' 'gvfs') #  'libcanberra'
+makedepends=('mate-doc-utils' 'mate-common' 'mate-corba' 'mate-conf' 'libmatecomponent' 'mate-mime-data' 'gvfs' 'mate-vfs') #  'libcanberra'
 options=('!emptydirs' '!libtool')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 install=libmate.install
+
 
 # mirrors
 # http://cptl.org/mate/${pkgname}.tar.gz
@@ -17,7 +18,7 @@ install=libmate.install
 # http://matsusoft.com.ar/uploads/gnu-linux/mate/${pkgname}.tar.gz
 
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('5fe1288523f5e7840402c68c0bcf5dfe838c3b13c91329aca757ad613842068d')
+sha256sums=('725603d5196ec3d99e1a1ae85f5f7bbbc0eeca22e89084bc8fcf1947ed43e562')
 
 build() {
 	cd "${srcdir}/${pkgname}"
