--- a/libmate/libmate/Makefile.in
+++ b/libmate/libmate/Makefile.in
@@ -173,6 +173,8 @@ GMOFILES = @GMOFILES@
 GMSGFMT = @GMSGFMT@
 GREP = @GREP@
 GTKDOC_CHECK = @GTKDOC_CHECK@
+GTKDOC_DEPS_CFLAGS = @GTKDOC_DEPS_CFLAGS@
+GTKDOC_DEPS_LIBS = @GTKDOC_DEPS_LIBS@
 GTKDOC_MKPDF = @GTKDOC_MKPDF@
 GTKDOC_REBASE = @GTKDOC_REBASE@
 HTML_DIR = @HTML_DIR@
@@ -457,7 +459,7 @@ clean-libLTLIBRARIES:
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-libmate-2.la: $(libmate_2_la_OBJECTS) $(libmate_2_la_DEPENDENCIES)
+libmate-2.la: $(libmate_2_la_OBJECTS) $(libmate_2_la_DEPENDENCIES) 
 	$(AM_V_CCLD)$(libmate_2_la_LINK) -rpath $(libdir) $(libmate_2_la_OBJECTS) $(libmate_2_la_LIBADD) $(LIBS)
 install-binPROGRAMS: $(bin_PROGRAMS)
 	@$(NORMAL_INSTALL)
@@ -502,7 +504,7 @@ clean-binPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-mate-open$(EXEEXT): $(mate_open_OBJECTS) $(mate_open_DEPENDENCIES)
+mate-open$(EXEEXT): $(mate_open_OBJECTS) $(mate_open_DEPENDENCIES) 
 	@rm -f mate-open$(EXEEXT)
 	$(AM_V_CCLD)$(LINK) $(mate_open_OBJECTS) $(mate_open_LDADD) $(LIBS)
 
