--- a/libmatecanvas/distro/archlinux/PKGBUILD
+++ b/libmatecanvas/distro/archlinux/PKGBUILD
@@ -16,6 +16,7 @@ build() {
 	cd "${srcdir}/${pkgname}"
 	./configure --prefix=/usr --disable-static \
 		--enable-glade || return 1
+	#--with-gtk=3.0
 	make || return 1
 }
 
