--- a/mate-themes/configure.in
+++ b/mate-themes/configure.in
@@ -1,6 +1,6 @@
 AC_PREREQ(2.53)
 
-AC_INIT([mate-themes], [2011.9.25],
+AC_INIT([mate-themes], [2011.10.27],
         [http://bugzilla.mate.org/enter_bug.cgi?product=mate-themes])
 AC_CONFIG_SRCDIR([icon-themes])
 
@@ -36,23 +36,23 @@ PKG_CHECK_MODULES(THEME_ENGINE,
 GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
 AC_SUBST(GTK_VERSION)
 
-# Check if it's a development (odd minor) version
-AC_MSG_CHECKING([development series build])
-MINOR_VERSION="`echo $PACKAGE_VERSION|cut -d. -f2`"
-if expr $MINOR_VERSION % 2 > /dev/null != "0"; then
+# Check if it's a development (odd minor) version (obsolete with date versions)
+#AC_MSG_CHECKING([development series build])
+#MINOR_VERSION="`echo $PACKAGE_VERSION|cut -d. -f2`"
+#if expr $MINOR_VERSION % 2 > /dev/null != "0"; then
    # Development version, disable mapping
    # and enable placeholder by default
-   icon_mapping_policy=no
-   placeholders_policy=yes
-   enable_test_themes=yes
-   AC_MSG_RESULT([yes])
-else
+#   icon_mapping_policy=no
+#   placeholders_policy=yes
+#   enable_test_themes=yes
+#   AC_MSG_RESULT([yes])
+#else
   # Stable version, enable mapping
   # and disable placeholders by default
   icon_mapping_policy=yes
   placeholders_policy=no
-  AC_MSG_RESULT([no])
-fi
+#  AC_MSG_RESULT([no])
+#fi
 
 # Configure option to force placeholders
 AC_ARG_ENABLE([placeholders],
