にゃあ にゃあ にゃあ

--- a/mate-desktop/mate-about/Makefile.am
+++ b/mate-desktop/mate-about/Makefile.am
@@ -6,9 +6,13 @@ mate_about_LDADD = $(MATE_ABOUT_LIBS) $(UNIQUE_LIBS)
 INCLUDES = \
 	-I$(top_srcdir) \
 	$(MATE_ABOUT_CFLAGS) \
-	-DLOCALE_DIR=\"$(datadir)/locale\"
+	-DLOCALE_DIR=\"$(datadir)/locale\" \
+	-DPIXMAPS_DIR=\"$(datadir)/pixmaps/\"
 
 @INTLTOOL_DESKTOP_RULE@
+
+pixmapdir  = $(datadir)/pixmaps
+pixmap_DATA = nyan-cat.gif
 
 desktopdir = $(datadir)/applications
 desktop_in_files = mate-about.desktop.in
