--- a/mate-doc-utils/distro/archlinux/PKGBUILD
+++ b/mate-doc-utils/distro/archlinux/PKGBUILD
@@ -16,8 +16,9 @@ groups=('mate')
 build() {
 	cd "${srcdir}/${pkgname}"
 	PYTHON=/usr/bin/python2 ./configure --prefix=/usr --sysconfdir=/etc \
-		--mandir=/usr/share/man --localstatedir=/var --disable-scrollkeeper
-	make
+		--mandir=/usr/share/man --localstatedir=/var \
+		--disable-scrollkeeper || return 1
+	make || return 1
 }
 
 package() {
