updating version and project HP

--- a/mate-doc-utils/configure.in
+++ b/mate-doc-utils/configure.in
@@ -1,5 +1,4 @@
-AC_INIT([mate-doc-utils], [2011.9.25],
-        [http://bugzilla.mate.org/enter_bug.cgi?product=mate-doc-utils])
+AC_INIT([mate-doc-utils], [2011.10.27], [https://github.com/Perberos/Mate-Desktop-Environment])
 AM_INIT_AUTOMAKE([1.9 no-dist-gzip dist-bzip2])
 
 AC_CONFIG_MACRO_DIR([m4])
