--- a/libmate/configure.in
+++ b/libmate/configure.in
@@ -9,7 +9,7 @@ AC_PREREQ(2.54)
 #
 m4_define([libmate_major_version], [2011])
 m4_define([libmate_minor_version], [10])
-m4_define([libmate_micro_version], [24])
+m4_define([libmate_micro_version], [27])
 m4_define([libmate_interface_age], [0])
 # If you need a modifier for the version number.
 # Normally empty, but can be used to make "fixup" releases.
@@ -33,8 +33,7 @@ m4_define([libmate_revision], [libmate_interface_age])
 m4_define([libmate_age], [m4_eval(libmate_binary_age - libmate_interface_age)])
 m4_define([libmate_version], [libmate_major_version().libmate_minor_version().libmate_micro_version()libmate_extraversion()])
 
-AC_INIT([libmate], [libmate_version],
-        [http://bugzilla.mate.org/enter_bug.cgi?product=libmate])
+AC_INIT([libmate], [libmate_version], [https://github.com/Perberos/Mate-Desktop-Environment])
 AC_CONFIG_SRCDIR([libmate/libmate.h])
 
 LIBMATE_MAJOR_VERSION=libmate_major_version
