--- a/mate-desktop/configure.in
+++ b/mate-desktop/configure.in
@@ -8,8 +8,7 @@ m4_define(mate_sub, )
 
 m4_define(mate_version, [mate_platform.mate_minor.mate_micro]m4_ifval(mate_sub, .mate_sub)),
 
-AC_INIT([mate-desktop], mate_version,
-        [http://bugzilla.mate.org/enter_bug.cgi?product=mate-desktop])
+AC_INIT([mate-desktop], mate_version, [https://github.com/Perberos/Mate-Desktop-Environment])
 AC_CONFIG_SRCDIR([libmate-desktop])
 
 AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2 tar-ustar])
