--- a/mate-notification-daemon/configure.ac
+++ b/mate-notification-daemon/configure.ac
@@ -3,7 +3,7 @@ dnl Process this file with autoconf to create configure.
 dnl ################################################################
 dnl # Initialize autoconf
 dnl ################################################################
-AC_INIT([mate-notification-daemon],[2011.9.25],[https://bugzilla.mate.org/enter_bug.cgi?product=notification-daemon],[mate-notification-daemon])
+AC_INIT([mate-notification-daemon], [2011.10.27], [https://github.com/Perberos/Mate-Desktop-Environment])
 AC_PREREQ(2.63)
 
 AC_CONFIG_HEADERS([config.h])
@@ -264,17 +264,17 @@ src/themes/standard/Makefile
 AC_OUTPUT
 
 echo "
-                    $PACKAGE_NAME $PACKAGE_VERSION
-                    =========================
+			$PACKAGE_NAME $PACKAGE_VERSION
+			=========================
 
 	prefix:                   ${prefix}
 	exec_prefix:              ${exec_prefix}
-        bindir:                   ${bindir}
-        datadir:                  ${datadir}
-	source code location:	  ${srcdir}
-	cflags:		          ${AM_CFLAGS}
+	bindir:                   ${bindir}
+	datadir:                  ${datadir}
+	source code location:     ${srcdir}
+	cflags:		              ${AM_CFLAGS}
 
-        dbus-1 system.d           $DBUS_SYS_DIR
-        dbus-1 services           $DBUS_SERVICES_DIR
+	dbus-1 system.d           $DBUS_SYS_DIR
+	dbus-1 services           $DBUS_SERVICES_DIR
 
 "
