adding --disable-nyancat on mate-desktop

--- a/mate-desktop/configure.in
+++ b/mate-desktop/configure.in
@@ -177,7 +177,7 @@ else
 	echo "Building without libstartup-notification"
 fi
 
-
+AC_SUBST(STARTUP_NOTIFICATION_PACKAGE)
 
 
 dnl we need x11 for MateBG
@@ -196,7 +196,7 @@ AC_SUBST(X11_PACKAGE)
 AC_SUBST(XLIB_CFLAGS)
 AC_SUBST(XLIB_LIBS)
 
-dnl Checks for X's RANDR extension
+dnl Checks for X is RANDR extension
 
 AC_MSG_CHECKING(for xrandr)
 if $PKG_CONFIG --atleast-version $XRANDR_REQUIRED xrandr; then
@@ -237,6 +237,19 @@ AC_SUBST(GETTEXT_PACKAGE)
 
 AM_GLIB_GNU_GETTEXT
 
+
+dnl ============================================================================
+dnl | にゃあ にゃあ にゃあ - Pop Tart Cat
+dnl | More info on <http://en.wikipedia.org/wiki/Nyan_Cat>
+dnl ============================================================================
+AC_ARG_ENABLE([nyancat],
+	[AS_HELP_STRING([--disable-nyancat], [disable the use of nyan cat as logo])],
+	[], [enable_nyancat=yes])
+
+if test "x$enable_nyancat" = "xno"; then
+	MATE_ABOUT_CFLAGS="$MATE_ABOUT_CFLAGS -DDISABLE_NYANCAT=1"
+fi
+
 dnl ============================================================================
 dnl | se comprueba unique
 dnl | de lo contrario, se intenta utilizar libunique
@@ -266,7 +279,7 @@ if test "x$enable_libunique" = "xyes"; then
 fi
 
 
-dnl Don't use AC_PROG_AWK since we need the full pathname.
+dnl Do not use AC_PROG_AWK since we need the full pathname.
 AC_PATH_PROGS(AWK, mawk gawk nawk awk, )
 AC_PATH_PROGS(PERL, perl5 perl)
 
