--- a/mate-desktop/docs/reference/mate-desktop/Makefile.in
+++ b/mate-desktop/docs/reference/mate-desktop/Makefile.in
@@ -183,6 +183,7 @@ REBUILD = @REBUILD@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
+STARTUP_NOTIFICATION_PACKAGE = @STARTUP_NOTIFICATION_PACKAGE@
 STRIP = @STRIP@
 UNIQUE_CFLAGS = @UNIQUE_CFLAGS@
 UNIQUE_LIBS = @UNIQUE_LIBS@
