--- a/mate-notification-daemon/distro/archlinux/PKGBUILD
+++ b/mate-notification-daemon/distro/archlinux/PKGBUILD
@@ -1,17 +1,19 @@
 pkgname=mate-notification-daemon
 pkgver=2011.10.29
-pkgrel=1
+pkgrel=2
 pkgdesc="Notification daemon for MATE"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
-depends=('libmatenotify' 'libwnck')
+depends=('libmatenotify' 'libwnck' 'gtk2')
 makedepends=('intltool')
+conflicts=('notification-daemon')
+provides=('notification-daemon')
 url="http://matsusoft.com.ar/projects"
 groups=('mate')
 options=('!libtool' '!emptydirs')
 install=mate-notification-daemon.install
 source=(http://sourceforge.net/projects/matede/files/${pkgver}/${pkgname}.tar.gz/download)
-sha256sums=('b304715fc81f23e797dedc717450ea6265a5540c61779690882dfe9eb0f8d072')
+sha256sums=('0d54436681f47cbc73f52762ada8827adc6ad265cb8eac4a378be80dc5a3e298')
 
 build() {
 	cd "${srcdir}/${pkgname}"
@@ -32,6 +34,9 @@ package() {
 	cd "${srcdir}/${pkgname}"
 
 	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
+
+	# hax!
+	ln -s mate-notify-send ${pkgdir}/usr/bin/notify-send
 
 	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
 	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
