--- a/mate-notification-daemon/distro/archlinux/PKGBUILD
+++ b/mate-notification-daemon/distro/archlinux/PKGBUILD
@@ -35,8 +35,8 @@ package() {
 
 	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
-	# hax!
-	ln -s mate-notify-send ${pkgdir}/usr/bin/notify-send
+	# hax! still conflicts with libnotify
+	#ln -s mate-notify-send ${pkgdir}/usr/bin/notify-send
 
 	install -m755 -d "${pkgdir}/usr/share/mateconf/schemas"
 	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas || return 1
