--- a/mate-themes/distro/ubuntu/build
+++ b/mate-themes/distro/ubuntu/build
@@ -2,10 +2,10 @@
 
 # fill it
 pkgname=mate-themes
-pkgver=2011.9.26
+pkgver=2011.10.29
 pkgrel=1
 pkgdesc="Default themes for the MATE desktop"
-#depends="gtk2, gtk-engines"
+depends=('gtk2' 'gtk2-engines' 'gtk2-engines-murrine' 'gtk2-engines-pixbuf')
 # editar esta funcion!
 build() {
 	cd $pkgsrc
@@ -18,6 +18,37 @@ build() {
 		--disable-placeholders || return 1
 	make || return 1
     make DESTDIR="$pkgdir" install || return 1
+
+	# be carefull
+    rm -rf ${pkgdir}/usr/share/icons/Crux/
+    rm -rf ${pkgdir}/usr/share/icons/HighContrastLargePrint/
+    rm -rf ${pkgdir}/usr/share/icons/HighContrastLargePrintInverse/
+    rm -rf ${pkgdir}/usr/share/icons/HighContrast-SVG/
+    rm -rf ${pkgdir}/usr/share/icons/MateCrux/
+    rm -rf ${pkgdir}/usr/share/icons/MateHighContrast/
+    rm -rf ${pkgdir}/usr/share/icons/MateHighContrastInverse/
+    rm -rf ${pkgdir}/usr/share/icons/MateHighContrastLargePrint/
+    rm -rf ${pkgdir}/usr/share/icons/MateHighContrastLargePrintInverse/
+    rm -rf ${pkgdir}/usr/share/icons/MateHighContrast-SVG/
+    rm -rf ${pkgdir}/usr/share/icons/MateLargePrint/
+    rm -rf ${pkgdir}/usr/share/icons/MateMist/
+    rm -rf ${pkgdir}/usr/share/icons/Mist/
+
+    rm -rf ${pkgdir}/usr/share/themes/Clearlooks/
+    rm -rf ${pkgdir}/usr/share/themes/ClearlooksClassic/
+    rm -rf ${pkgdir}/usr/share/themes/Crux/
+    rm -rf ${pkgdir}/usr/share/themes/Glider/
+    rm -rf ${pkgdir}/usr/share/themes/Glossy/
+    rm -rf ${pkgdir}/usr/share/themes/HighContrast/
+    rm -rf ${pkgdir}/usr/share/themes/HighContrastInverse/
+    rm -rf ${pkgdir}/usr/share/themes/HighContrastLargePrint/
+    rm -rf ${pkgdir}/usr/share/themes/HighContrastLargePrintInverse/
+    rm -rf ${pkgdir}/usr/share/themes/Inverted/
+    rm -rf ${pkgdir}/usr/share/themes/LargePrint/
+    rm -rf ${pkgdir}/usr/share/themes/LowContrast/
+    rm -rf ${pkgdir}/usr/share/themes/LowContrastLargePrint/
+    rm -rf ${pkgdir}/usr/share/themes/Mist/
+    rm -rf ${pkgdir}/usr/share/themes/Simple/
 }
 
 # esto incluye la parte que se repite en la mayoria de los builds
