--- a/mate-window-manager/distro/ubuntu/build
+++ b/mate-window-manager/distro/ubuntu/build
@@ -2,10 +2,10 @@
 
 # fill it
 pkgname=mate-window-manager
-pkgver=2011.9.26
+pkgver=2011.10.29
 pkgrel=1
 pkgdesc="A window manager for MATE"
-#depends="startup-notification, mate-conf, mate-dialogs, libcanberra, libgtop, libwnck"
+depends=('mate-conf' 'mate-dialogs' 'libgtop2-7' 'libwnck22')
 # editar esta funcion!
 build() {
 	cd $pkgsrc
