--- a/mate-vfs/distro/ubuntu/build
+++ b/mate-vfs/distro/ubuntu/build
@@ -2,9 +2,10 @@
 
 # fill it
 pkgname=mate-vfs
-pkgver=2011.9.26
+pkgver=2011.10.29
 pkgrel=1
 pkgdesc="The MATE Virtual File System"
+depends=('gvfs' 'mate-conf' 'mate-mime-data')
 makedepends=('mate-common' 'libbz2-dev' 'libgcrypt11-dev' 'libgnutls-dev' 'libgamin-dev' 'libtool' 'gtk-doc-utils')
 
 # editar esta funcion!
@@ -15,22 +16,15 @@ build() {
 	# entramos a la carpeta
 	cd ${pkgname}
 
-	#Fix build with new gnutls
-	libtoolize --force
-	gtkdocize
-	aclocal
-	autoconf
-	automake
 	./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
 		--libexecdir=/usr/lib/${pkgname} \
-		--enable-openssl
-		#--enable-samba --disable-hal \
-		#--enable-avahi --disable-howl \
-		#--disable-openssl --enable-gnutls
-	make
+		--disable-samba --disable-hal \
+		--disable-avahi --disable-howl \
+		--disable-openssl || return 1
+	make || return 1
 
-	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install
+	make MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
 	install -d -m755 "${pkgdir}/usr/share/mateconf/schemas"
 	mateconf-merge-schema "${pkgdir}/usr/share/mateconf/schemas/${pkgname}.schemas" --domain ${pkgname} ${pkgdir}/etc/mateconf/schemas/*.schemas
