--- a/mate-settings-daemon/distro/ubuntu/build
+++ b/mate-settings-daemon/distro/ubuntu/build
@@ -2,10 +2,10 @@
 
 # fill it
 pkgname=mate-settings-daemon
-pkgver=2011.9.26
+pkgver=2011.10.29
 pkgrel=1
 pkgdesc="Common libraries for MATE"
-#depends="libmatekbd, mate-desktop, libmatenotify, gstreamer0.10-base, hicolor-icon-theme"
+depends=('libmatekbd' 'mate-desktop' 'libmatenotify' 'hicolor-icon-theme')
 
 # editar esta funcion!
 build() {
@@ -15,15 +15,11 @@ build() {
 	# entramos a la carpeta
 	cd ${pkgname}
 
-	libtoolize --force || return 1
-	aclocal || return 1
-	autoconf || return 1
-	automake || return 1
 	./configure --prefix=/usr --sysconfdir=/etc --localstatedir=/var \
-		--libexecdir=/usr/bin \
+		--libexecdir=/usr/bin/${pkgname} \
 		--disable-static --disable-pulse --disable-schemas-install \
 		--enable-polkit || return 1
-	make
+	make || return 1
 
 	make DESTDIR="${pkgdir}" MATECONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 install || return 1
 
