--- a/mate-panel/distro/ubuntu/build
+++ b/mate-panel/distro/ubuntu/build
@@ -2,10 +2,10 @@
 
 # fill it
 pkgname=mate-panel
-pkgver=2011.10.13
+pkgver=2011.10.29
 pkgrel=1
 pkgdesc="The MATE Panel"
-#depends="libwnck, mate-conf, mate-menus, mate-desktop, librsvg, hicolor-icon-theme, libcanberra, libmatecomponentui, libmateweather"
+depends=('libwnck22' 'mate-conf' 'mate-menus' 'mate-desktop' 'librsvg2-2' 'hicolor-icon-theme' 'libcanberra-gtk0' 'libmatecomponentui' 'libmateweather') # 'evolution-data-server'
 
 # editar esta funcion!
 build() {
