--- a/libmatecomponentui/tests/Makefile.in
+++ b/libmatecomponentui/tests/Makefile.in
@@ -366,7 +366,7 @@ mate_test_sensitivity_SOURCES = mate-test-sensitivity.c
 mate_test_reparent_SOURCES = mate-test-reparent.c
 mate_test_moniker_SOURCES = mate-test-moniker.c
 mate_test_filesel_SOURCES = mate-test-filesel.c
-TESTS = test-ui-auto
+TESTS = mate-test-ui-auto
 all: all-recursive
 
 .SUFFIXES:
@@ -453,34 +453,34 @@ clean-noinstPROGRAMS:
 	list=`for p in $$list; do echo "$$p"; done | sed 's/$(EXEEXT)$$//'`; \
 	echo " rm -f" $$list; \
 	rm -f $$list
-mate-test-events$(EXEEXT): $(mate_test_events_OBJECTS) $(mate_test_events_DEPENDENCIES) 
+mate-test-events$(EXEEXT): $(mate_test_events_OBJECTS) $(mate_test_events_DEPENDENCIES)
 	@rm -f mate-test-events$(EXEEXT)
 	$(LINK) $(mate_test_events_OBJECTS) $(mate_test_events_LDADD) $(LIBS)
-mate-test-filesel$(EXEEXT): $(mate_test_filesel_OBJECTS) $(mate_test_filesel_DEPENDENCIES) 
+mate-test-filesel$(EXEEXT): $(mate_test_filesel_OBJECTS) $(mate_test_filesel_DEPENDENCIES)
 	@rm -f mate-test-filesel$(EXEEXT)
 	$(LINK) $(mate_test_filesel_OBJECTS) $(mate_test_filesel_LDADD) $(LIBS)
-mate-test-focus$(EXEEXT): $(mate_test_focus_OBJECTS) $(mate_test_focus_DEPENDENCIES) 
+mate-test-focus$(EXEEXT): $(mate_test_focus_OBJECTS) $(mate_test_focus_DEPENDENCIES)
 	@rm -f mate-test-focus$(EXEEXT)
 	$(LINK) $(mate_test_focus_OBJECTS) $(mate_test_focus_LDADD) $(LIBS)
-mate-test-moniker$(EXEEXT): $(mate_test_moniker_OBJECTS) $(mate_test_moniker_DEPENDENCIES) 
+mate-test-moniker$(EXEEXT): $(mate_test_moniker_OBJECTS) $(mate_test_moniker_DEPENDENCIES)
 	@rm -f mate-test-moniker$(EXEEXT)
 	$(LINK) $(mate_test_moniker_OBJECTS) $(mate_test_moniker_LDADD) $(LIBS)
-mate-test-reparent$(EXEEXT): $(mate_test_reparent_OBJECTS) $(mate_test_reparent_DEPENDENCIES) 
+mate-test-reparent$(EXEEXT): $(mate_test_reparent_OBJECTS) $(mate_test_reparent_DEPENDENCIES)
 	@rm -f mate-test-reparent$(EXEEXT)
 	$(LINK) $(mate_test_reparent_OBJECTS) $(mate_test_reparent_LDADD) $(LIBS)
-mate-test-selector$(EXEEXT): $(mate_test_selector_OBJECTS) $(mate_test_selector_DEPENDENCIES) 
+mate-test-selector$(EXEEXT): $(mate_test_selector_OBJECTS) $(mate_test_selector_DEPENDENCIES)
 	@rm -f mate-test-selector$(EXEEXT)
 	$(LINK) $(mate_test_selector_OBJECTS) $(mate_test_selector_LDADD) $(LIBS)
-mate-test-sensitivity$(EXEEXT): $(mate_test_sensitivity_OBJECTS) $(mate_test_sensitivity_DEPENDENCIES) 
+mate-test-sensitivity$(EXEEXT): $(mate_test_sensitivity_OBJECTS) $(mate_test_sensitivity_DEPENDENCIES)
 	@rm -f mate-test-sensitivity$(EXEEXT)
 	$(LINK) $(mate_test_sensitivity_OBJECTS) $(mate_test_sensitivity_LDADD) $(LIBS)
-mate-test-toolbar$(EXEEXT): $(mate_test_toolbar_OBJECTS) $(mate_test_toolbar_DEPENDENCIES) 
+mate-test-toolbar$(EXEEXT): $(mate_test_toolbar_OBJECTS) $(mate_test_toolbar_DEPENDENCIES)
 	@rm -f mate-test-toolbar$(EXEEXT)
 	$(LINK) $(mate_test_toolbar_OBJECTS) $(mate_test_toolbar_LDADD) $(LIBS)
-mate-test-ui$(EXEEXT): $(mate_test_ui_OBJECTS) $(mate_test_ui_DEPENDENCIES) 
+mate-test-ui$(EXEEXT): $(mate_test_ui_OBJECTS) $(mate_test_ui_DEPENDENCIES)
 	@rm -f mate-test-ui$(EXEEXT)
 	$(LINK) $(mate_test_ui_OBJECTS) $(mate_test_ui_LDADD) $(LIBS)
-mate-test-ui-auto$(EXEEXT): $(mate_test_ui_auto_OBJECTS) $(mate_test_ui_auto_DEPENDENCIES) 
+mate-test-ui-auto$(EXEEXT): $(mate_test_ui_auto_OBJECTS) $(mate_test_ui_auto_DEPENDENCIES)
 	@rm -f mate-test-ui-auto$(EXEEXT)
 	$(LINK) $(mate_test_ui_auto_OBJECTS) $(mate_test_ui_auto_LDADD) $(LIBS)
 
