Dependency gtk-doc-utils doesn't exist. Replaced with gtk-doc-tools.

--- a/mate-vfs/distro/ubuntu/build
+++ b/mate-vfs/distro/ubuntu/build
@@ -6,7 +6,7 @@ pkgver=2011.10.29
 pkgrel=1
 pkgdesc="The MATE Virtual File System"
 depends=('gvfs' 'mate-conf' 'mate-mime-data')
-makedepends=('mate-common' 'libbz2-dev' 'libgcrypt11-dev' 'libgnutls-dev' 'libgamin-dev' 'libtool' 'gtk-doc-utils')
+makedepends=('mate-common' 'libbz2-dev' 'libgcrypt11-dev' 'libgnutls-dev' 'libgamin-dev' 'libtool' 'gtk-doc-tools')
 
 # editar esta funcion!
 build() {
