Fixed issue which caused check-timeszones.sh to fail because <tz-hint>Pacific/Ponape</tz-hint> doesn't exit in /usr/share/zoneinfo/zone.tab. Replaced Ponape with Pohnpei.

--- a/libmateweather/data/Locations.xml.in
+++ b/libmateweather/data/Locations.xml.in
@@ -7427,7 +7427,7 @@
         <location>
           <name>Pohnpei</name>
           <code>PTTP</code>
-          <tz-hint>Pacific/Ponape</tz-hint>
+          <tz-hint>Pacific/Pohnpei</tz-hint>
           <coordinates>6.966667 158.216667</coordinates>
         </location>
       </city>
