--- a/libmate/distro/ubuntu/build
+++ b/libmate/distro/ubuntu/build
@@ -17,7 +17,8 @@ build() {
 
 	./configure --prefix=/usr --sysconfdir=/etc \
 		--localstatedir=/var --disable-static \
-		--libexecdir=/usr/lib/libmate --disable-canberra \
+		--libexecdir=/usr/lib/libmate \
+		--disable-canberra \
 		--disable-schemas-install || return 1
 
 	make || return 1
