adding depends array

--- a/libmatecanvas/distro/ubuntu/build
+++ b/libmatecanvas/distro/ubuntu/build
@@ -5,7 +5,9 @@ pkgname=libmatecanvas
 pkgver=2011.9.26
 pkgrel=1
 pkgdesc="The MATE Canvas library"
+depends=('libart-2.0-2' 'libglade2-0')
 makedepends=('libgail-dev' 'libgtk2.0-dev' 'libart-2.0-dev' 'libglade2-dev')
+
 # editar esta funcion!
 build() {
 	cd $pkgsrc
