adding gtk version variable

--- a/mate-file-manager/configure.in
+++ b/mate-file-manager/configure.in
@@ -379,14 +379,14 @@ AC_SUBST(RENDER_LIBS)
 dnl ==========================================================================
 
 dnl libegg
-LIBEGG_MODULES="gtk+-2.0"
+LIBEGG_MODULES="gtk+-$GTK_API_VERSION"
 LIBEGG_CFLAGS="`$PKG_CONFIG --cflags $LIBEGG_MODULES`"
 AC_SUBST(LIBEGG_CFLAGS)
 LIBEGG_LIBS="`$PKG_CONFIG --libs $LIBEGG_MODULES`"
 AC_SUBST(LIBEGG_LIBS)
 
 dnl libcaja-extension
-LIBCAJA_EXTENSION_MODULES="glib-2.0 gtk+-2.0"
+LIBCAJA_EXTENSION_MODULES="glib-2.0 gtk+-$GTK_API_VERSION"
 LIBCAJA_EXTENSION_CFLAGS="`$PKG_CONFIG --cflags $LIBCAJA_EXTENSION_MODULES`"
 AC_SUBST(LIBCAJA_EXTENSION_CFLAGS)
 LIBCAJA_EXTENSION_LIBS="`$PKG_CONFIG --libs $LIBCAJA_EXTENSION_MODULES`"
