--- a/mate-menus/po/POTFILES.in
+++ b/mate-menus/po/POTFILES.in
@@ -20,8 +20,9 @@ desktop-directories/mate-utility.directory.in
 desktop-directories/mate-menu-applications.directory.in
 desktop-directories/mate-menu-system.directory.in
 desktop-directories/mate-other.directory.in
-simple-editor/matemenu-simple-editor.desktop.in
-[type: gettext/glade]simple-editor/matemenu-simple-editor.ui
-simple-editor/MateMenuSimpleEditor/main.py
-simple-editor/MateMenuSimpleEditor/maindialog.py
-simple-editor/MateMenuSimpleEditor/menufilewriter.py
+# simple menu was removed
+#simple-editor/matemenu-simple-editor.desktop.in
+#[type: gettext/glade]simple-editor/matemenu-simple-editor.ui
+#simple-editor/MateMenuSimpleEditor/main.py
+#simple-editor/MateMenuSimpleEditor/maindialog.py
+#simple-editor/MateMenuSimpleEditor/menufilewriter.py
