fixing conflicts with libgcr from gnome-keyring (report if this change broke any thing)

--- a/mate-keyring/gcr/tests/Makefile.am
+++ b/mate-keyring/gcr/tests/Makefile.am
@@ -9,7 +9,7 @@ TESTING_LIBS =  \
 	$(top_builddir)/egg/libegg.la \
 	$(top_builddir)/egg/libegg-entry-buffer.la \
 	$(top_builddir)/gp11/libgp11.la
-	
+
 TESTING_FLAGS = \
 	-DGCR_API_SUBJECT_TO_CHANGE
 
@@ -29,7 +29,7 @@ ui_test_details_CFLAGS = \
 	$(GTK_CFLAGS)
 
 ui_test_details_LDADD = \
-	$(top_builddir)/gcr/libgcr@GCR_VERSION_SUFFIX@.la \
+	$(top_builddir)/gcr/libmategcr@GCR_VERSION_SUFFIX@.la \
 	$(GTK_LIBS) \
 	$(LIBGCRYPT_LIBS)
 
@@ -41,7 +41,7 @@ ui_test_unlock_options_CFLAGS = \
 	$(GTK_CFLAGS)
 
 ui_test_unlock_options_LDADD = \
-	$(top_builddir)/gcr/libgcr@GCR_VERSION_SUFFIX@.la \
+	$(top_builddir)/gcr/libmategcr@GCR_VERSION_SUFFIX@.la \
 	$(GTK_LIBS) \
 	$(LIBGCRYPT_LIBS)
 
