--- a/mate-keyring/ui/Makefile.in
+++ b/mate-keyring/ui/Makefile.in
@@ -67,7 +67,7 @@ mate_keyring_prompt@GCR_VERSION_SUFFIX@_OBJECTS =  \
 mate_keyring_prompt@GCR_VERSION_SUFFIX@_DEPENDENCIES =  \
 	$(top_builddir)/egg/libegg-prompt.la \
 	$(top_builddir)/egg/libegg-entry-buffer.la \
-	$(top_builddir)/gcr/libgcr@GCR_VERSION_SUFFIX@.la \
+	$(top_builddir)/gcr/libmategcr@GCR_VERSION_SUFFIX@.la \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 mate_keyring_prompt@GCR_VERSION_SUFFIX@_LINK = $(LIBTOOL) $(AM_V_lt) \
 	--tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link \
@@ -406,7 +406,7 @@ mate_keyring_prompt@GCR_VERSION_SUFFIX@_SOURCES = \
 mate_keyring_prompt@GCR_VERSION_SUFFIX@_LDADD = \
 	$(top_builddir)/egg/libegg-prompt.la \
 	$(top_builddir)/egg/libegg-entry-buffer.la \
-	$(top_builddir)/gcr/libgcr@GCR_VERSION_SUFFIX@.la \
+	$(top_builddir)/gcr/libmategcr@GCR_VERSION_SUFFIX@.la \
 	$(LIBGCRYPT_LIBS) \
 	$(GTK_LIBS)
 
