--- a/mate-keyring/tool/Makefile.in
+++ b/mate-keyring/tool/Makefile.in
@@ -55,7 +55,7 @@ mate_keyring@GCR_VERSION_SUFFIX@_OBJECTS =  \
 am__DEPENDENCIES_1 =
 mate_keyring@GCR_VERSION_SUFFIX@_DEPENDENCIES =  \
 	$(top_builddir)/gp11/libgp11.la \
-	$(top_builddir)/gcr/libgcr@GCR_VERSION_SUFFIX@.la \
+	$(top_builddir)/gcr/libmategcr@GCR_VERSION_SUFFIX@.la \
 	$(top_builddir)/egg/libegg.la $(am__DEPENDENCIES_1) \
 	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 AM_V_lt = $(am__v_lt_$(V))
@@ -305,7 +305,7 @@ mate_keyring@GCR_VERSION_SUFFIX@_CFLAGS = \
 
 mate_keyring@GCR_VERSION_SUFFIX@_LDADD = \
 	$(top_builddir)/gp11/libgp11.la \
-	$(top_builddir)/gcr/libgcr@GCR_VERSION_SUFFIX@.la \
+	$(top_builddir)/gcr/libmategcr@GCR_VERSION_SUFFIX@.la \
 	$(top_builddir)/egg/libegg.la \
 	$(GTHREAD_LIBS) \
 	$(GTK_LIBS) \
